<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <EditTextPreference
        android:defaultValue="@string/pref_bed_sensor_pol_interval_default"
        android:key="pref_bed_sensor_pol_interval"
        android:singleLine="true"
        android:title="@string/pref_bed_sensor_pol_interval" />

    <PreferenceCategory android:title="Advanced" >
        <EditTextPreference
            android:defaultValue="@string/pref_server_address_default"
            android:key="pref_server_address"
            android:singleLine="true"
            android:title="@string/pref_server_address" />
        <EditTextPreference
            android:defaultValue="@string/pref_server_port_default"
            android:key="pref_server_port"
            android:singleLine="true"
            android:title="@string/pref_server_port" />
    </PreferenceCategory>

</PreferenceScreen>