<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/welcomeScr2Heading1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp"
        android:text="@string/welcomeScr2Heading1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:id="@+id/welcomeScr2Heading2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/welcomeScr2Heading1"
        android:gravity="center_horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp"
        android:text="@string/welcomeScr2Heading2"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:id="@+id/welcomeScr2Instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/welcomeScr2Heading2"
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp"
        android:text="@string/welcomeScr2Instructions" />

    <Button
        android:id="@+id/welcomeScr2BtnContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/welcomeScr2BtnContinue" />

</RelativeLayout>